# X_pro_bot

./: .gitignore  README.md  dist.crx  dist.pem  index.html  manifest.json  package-lock.json  package.json  requirements.txt  setup.bat  setup.sh  tsconfig.app.json  tweet.txt  vite.config.ts
app/: globals.css  layout.tsx  page.tsx
app/api/analyze/: route.ts
app/api/facts/: route.ts
app/api/sentiment/: route.ts
app/api/viral/: route.ts
backend/: .env  .env.example  README.md  main.py  pyproject.toml  requirements.txt
backend/agents/: crew_manager.py
backend/agents/tools/: web_scraper.py
backend/api/: routes.py
backend/config/: settings.py
backend/src/: main.py
components/: analysis-form.tsx  navbar.tsx
lib/: config.ts
src/: App.tsx  background.ts  content.css  contentScript.ts
src/components/: Navbar.tsx
src/pages/: FactChecker.tsx  Home.tsx  SentimentAnalyzer.tsx  ViralGenerator.tsx
xlens/: .env.example  .env.example.example  .gitignore  README.md  pyproject.toml
xlens/src/xlens/: main.py
xlens/src/xlens/crews/fact_checker/: fact_checker_crew.py
xlens/src/xlens/crews/fact_checker/config/: agents.yaml  tasks.yaml
xlens/src/xlens/crews/sentiment_analyzer/: sentiment_analyzer_crew.py
xlens/src/xlens/crews/sentiment_analyzer/config/: agents.yaml  tasks.yaml
xlens/src/xlens/crews/viral_tweet_generator/: viral_tweet_generator_crew.py
xlens/src/xlens/crews/viral_tweet_generator/config/: agents.yaml  tasks.yaml
xlens/src/xlens/tools/: X_api_controller.py  custom_tool.py  googletrends.py  twittertool.py
(+8 files in other folders)
