[project]
name = "xlens"
version = "0.1.0"
description = "XLENS using crewAI"
authors = [{ name = "Goutham", email = "raogoutham374@gmail.com" },{ name="Kshitij kumrawat", email="kshitijk146@gmail.com"},{ name="Akramb outzouga", email="akramboutzouga@gmail.com"},{ name="srijan",email=""}]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0",
    "uvicorn",
    "fastapi",
    "pydantic",
    "crewai",
    "tweepy",
    "python-dotenv"
]

[project.scripts]
kickoff = "xlens.main:kickoff"
plot = "xlens.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
